fix overflow

--- a/src/components/sections/Projects.css
+++ b/src/components/sections/Projects.css
@@ -1,5 +1,6 @@
 #greater-project-area {
   width: 100vw;
+  max-width: 100%;
   background-color: var(--pewter-blue);
   padding-bottom: 1em;
 }
